examples/test/testpolicy14209.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14209
  namespace: namespace455
spec:
  podSelector:
    matchLabels:
      key8: value3
      key38: value28
      key40: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value37
          key24: value19
          key18: value3
      podSelector:
        matchLabels:
          key8: value40
          key23: value21
          key38: value3
